@@ -1,5 +1,10 @@
 2012-12-28  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlstyle.c:
+	  - Fix linux build by removing unused function.
+
+2012-12-28  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
 	(gst_ttml_attribute_free), (gst_ttml_attribute_copy),
 	(gst_ttml_attribute_type_name):
